hw-6 team section - done

--- a/index.html
+++ b/index.html
@@ -185,12 +185,17 @@
           </ul>
         </div>
       </section>
-      <section class="team-card hidden">
+      <section class="team-card">
         <div class="container">
           <h2 class="our-team">Our Team</h2>
           <ul class="team-list">
             <li class="li-team">
-              <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" />
+              <img
+                srcset="./images/Mark_1x.jpg 1x, ./images/Mark_2x.jpg 2x"
+                src="./images/Mark_1x.jpg"
+                alt="Mark Guerrero"
+                width="264"
+              />
               <div class="card-info">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="small-text">Product Designer</p>
@@ -227,7 +232,12 @@
               </div>
             </li>
             <li class="li-team">
-              <img src="./images/img-2.jpg" alt="Tom Ford" width="264" />
+              <img
+                srcset="./images/Tom_1x.jpg 1x, ./images/Tom_2x.jpg 2x"
+                src="./images/Tom_1x.jpg"
+                alt="Tom Ford"
+                width="264"
+              />
               <div class="card-info">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="small-text">Frontend Developer</p>
@@ -264,7 +274,12 @@
               </div>
             </li>
             <li class="li-team">
-              <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" />
+              <img
+                srcset="./images/Camila_1x.jpg 1x, ./images/Camila_2x.jpg 2x"
+                src="./images/Camila_1x.jpg"
+                alt="Camila Garcia"
+                width="264"
+              />
               <div class="card-info">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="small-text">Marketing</p>
@@ -302,11 +317,15 @@
               </div>
             </li>
             <li class="li-team">
-              <img src="./images/img.jpg" alt="Daniel Wilson" width="264" />
+              <img
+                srcset="./images/Daniel_1x.jpg 1x, ./images/Daniel_2x.jpg 2x"
+                src="./images/Daniel_1x.jpg"
+                alt="Daniel Wilson"
+                width="264"
+              />
               <div class="card-info">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="small-text">UI Designer</p>
-
                 <ul class="social-links">
                   <li class="social-li">
                     <a href="" class="icon-link">
