hw-6 fixed social links in team

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
               <div class="card-info">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="small-text">Product Designer</p>
-                <ul class="social-links">
+                <ul class="social-links-team">
                   <li class="social-li">
                     <a href="" class="icon-link">
                       <svg class="social-icon-team" width="16" height="16">
@@ -246,7 +246,7 @@
               <div class="card-info">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="small-text">Frontend Developer</p>
-                <ul class="social-links">
+                <ul class="social-links-team">
                   <li class="social-li">
                     <a href="" class="icon-link">
                       <svg class="icon" width="16" height="16">
@@ -292,7 +292,7 @@
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="small-text">Marketing</p>
 
-                <ul class="social-links">
+                <ul class="social-links-team">
                   <li class="social-li">
                     <a href="" class="icon-link">
                       <svg class="icon" width="16" height="16">
@@ -337,7 +337,7 @@
               <div class="card-info">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="small-text">UI Designer</p>
-                <ul class="social-links">
+                <ul class="social-links-team">
                   <li class="social-li">
                     <a href="" class="icon-link">
                       <svg class="icon" width="16" height="16">
